# gomoku

./: LICENSE  MANIFEST  README.rst  setup.cfg  setup.py
gomoku/: errors.py  utils.py
tests/: test_utils.py
