[metadata]
name = gomoku
version = 0.1
author = Andrii V. Mishkovskyi
author_email = contact@mishkovskyi.net
description = Gomoku server and client
home_page = http://github.com/mishok13/gomoku

classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License

[files]
packages = gomoku
